#11 - hoangnin - Implement-chatbox-socket
update product image create